--- a/HTML Version/index.html
+++ b/HTML Version/index.html
@@ -3,13 +3,22 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="mvp.css"
+        <link rel="stylesheet" href="mvp.css">
+        <link rel="stylesheet" href="custom.css">
         <title>Login</title>
     </head>
     <body>
         <center>
-        <h1>Bruh</h1>
-        <p>Hello World</p>
+        <h1>Welcome</h1>
+        <div class="form-container">
+            <ul>
+                <li>Enter your UserName</li>
+                <li><input type="text" name = username placeholder="UserName"></li>
+                <li>Enter your Password</li>
+                <li><input type="password" name = password placeholder="........."></li>
+                <li><input type="button" name = submit value="Submit"></li>
+            </ul>
+        </div>
         </center>
     </body>
 </html>
