Getting somewhere; closer to starting backend!

--- a/HTML Version/index.html
+++ b/HTML Version/index.html
@@ -3,11 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <link rel="stylesheet" href="mvp.css">
         <link rel="stylesheet" href="custom.css">
+
         <title>Login</title>
     </head>
-    <body>
+    <body style="background-color: #1b262c;">
+        <div class="nav-bar">
+            <header>
+                <nav>
+                    <ul>
+                        <li>Home</li>
+                        <li><a href="https://github.com/profile/joeltomjoseph">Github</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
+
         <center>
         <h1>Welcome</h1>
         <div class="form-container">
