--- a/HTML Version/index.html
+++ b/HTML Version/index.html
@@ -29,7 +29,7 @@
                 <li><input type="text" name = username placeholder="UserName"></li>
                 <li>Enter your Password</li>
                 <li><input type="password" name = password placeholder="........."></li>
-                <li><input type="button" name = submit value="Submit"></li>
+                <li ><input class="button" type="button" name = submit value="Submit"></li>
             </ul>
         </div>
         </center>
