--- a/HTML Version/index.html
+++ b/HTML Version/index.html
@@ -14,8 +14,8 @@
             <header>
                 <nav>
                     <ul>
-                        <li>Home</li>
-                        <li><a href="https://github.com/profile/joeltomjoseph">Github</a></li>
+                        <li><img class="gitlogo" src="icons/home.png"></li>
+                        <li><a href="https://github.com/joeltomjoseph"><img class="gitlogo" src="icons/GitHub-Mark-32px.png"></a></li>
                     </ul>
                 </nav>
             </header>
