--- a/HTML Version/index.html
+++ b/HTML Version/index.html
@@ -10,6 +10,7 @@
         <title>Login</title>
     </head>
     <body style="background-color: #1b262c;">
+
         <div class="nav-bar">
             <header>
                 <nav>
@@ -23,15 +24,16 @@
 
         <center>
         <h1>Welcome</h1>
-        <div class="form-container">
-            <ul>
-                <li>Enter your UserName</li>
-                <li><input type="text" name = username placeholder="UserName"></li>
-                <li>Enter your Password</li>
-                <li><input type="password" name = password placeholder="........."></li>
-                <li ><input class="button" type="button" name = submit value="Submit"></li>
-            </ul>
-        </div>
+            <form class="form-container">
+                <ul>
+                    <li>Enter your UserName</li>
+                    <li><input type="text" name = username placeholder="UserName"></li>
+                    <li>Enter your Password</li>
+                    <li><input type="password" name = password placeholder="........."></li>
+                    <li ><input type="button" onclick="alert(username + password)" class="button" value="Login"></li>
+                </ul>
+            </form>
         </center>
+
     </body>
 </html>
