Begining Backend with Flask!

--- a/HTML Version/index.html
+++ b/HTML Version/index.html
@@ -24,13 +24,13 @@
 
         <center>
         <h1>Welcome</h1>
-            <form class="form-container">
+            <form class="form-container" action="/home" method="post">
                 <ul>
                     <li>Enter your UserName</li>
                     <li><input type="text" name = username placeholder="UserName"></li>
                     <li>Enter your Password</li>
                     <li><input type="password" name = password placeholder="........."></li>
-                    <li ><input type="button" onclick="alert(username + password)" class="button" value="Login"></li>
+                    <li><input type="submit" class="button" value="Login"></li>
                 </ul>
             </form>
         </center>
