Fixed! I think its Finished!

--- a/HTML Version/login.html
+++ b/HTML Version/login.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--Linking CSS Files for Styling and JQuery from Google via CDN!-->
+        <!--Linking CSS Files for Styling, home.png for the icon and JQuery from Google via CDN!-->
         <link rel="stylesheet" href="mvp.css">
         <link rel="stylesheet" href="custom.css">
+        <link rel="icon" href="icons/home.png">
         <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
         <!--Title-->
         <title>Login</title>
@@ -54,7 +55,7 @@
         }
     </script>
 
-    <body style="background-color: #1b262c;">
+    <body>
         <!--Nav-Bar at the top of the website!-->
         <div class="nav-bar">
             <header>
